[package]
name = "texting_robots_cc_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "0.2.17"
indicatif = { version = "0.16.2", features = ["rayon"] }
rayon = "1.5.1"
regex = "1.5.5"
texting_robots = { git = "ssh://git@github.com/Smerity/texting_robots.git" }
warc = "0.3.0"